Replaced BackendExtention and DataApp with ExtendedApp Now each individual app can have specific extentions for more flexibility Refined DefaultDataApp and it now uses ExtendedApp.
